--- a/CCP120 - Simulado/home.html
+++ b/CCP120 - Simulado/home.html
@@ -22,12 +22,13 @@
     </div>
     <div class="topo">
         <img src="1.png" alt="logo">
+        <div class="texttopo">
         <h3>14:10 15 de Março de 2023 redacao@correio24horas.com.br</h3>
-        <h5>Facebook</h5>
-        <h5>Twitter</h5>
-        <h5>Instagram</h5>
-        <h5>Youtube</h5>
-        <h5>RSS</h5>
+        <hr>
+            <div class="textoh5">
+            <h5>Facebook</h5><h5>Twitter</h5><h5>Instagram</h5><h5>Youtube</h5><h5>RSS</h5>   
+            </div>
+        </div>
     </div>
     <br>
     <h2>Festival da Cidade terá 15 dias de programação em Salvador</h2>
